<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/basketMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_message"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:layout_below="@+id/toolbarLayout"
            android:layout_marginTop="40sp"
            android:textStyle="bold"
            android:textSize="26sp"
            />

        <TextView
            android:id="@+id/basketDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/basketMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:alpha="0.8"
            android:textAlignment="center"
            android:textColor="#343435"
            android:textSize="18sp" />


        <Button
            android:id="@+id/homePageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/basketDesc"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/home_page_button"
            android:text="@string/backtoHomePage"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <include layout="@layout/toolbar" />
        </RelativeLayout>
    </RelativeLayout>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/result_background"
        android:clipToPadding="true"
        app:behavior_hideable="false"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="@string/bottom_sheet_behavior">
        <RelativeLayout
            android:id="@+id/relative_inside"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


        <View
            android:id="@+id/line"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:elevation="3dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@color/nearGray"
            />


            <TextView
                android:id="@+id/paidPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/paidPrice"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:layout_below="@+id/line"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:textColor="@color/mainPurple"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/lineTwo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/totalPrice"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@color/lightGray"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/lineTwo"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="10dp"
                />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>